--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"dependencies": {
 		"axios": "^0.17.1",
 		"discord.js": "^11.3.0",
-		"dotenv": "^5.0.0"
+		"dotenv": "^5.0.0",
+		"express": "^4.18.2"
 	}
 }
